<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="action_pause">Suspend</string>
    <string name="action_resume">Resume</string>
    <string name="action_settings">Settings</string>
    <string name="app_name">OLED Saver</string>
    <string name="brightness">Brightness</string>
    <string name="brightness_correction">Brightness Correction</string>
    <string name="brightness_correction_notify">Please turn on the service before performing brightness correction</string>
    <string name="check_accessibility_permission">Please turn on the OLED Saver service in Accessibility to reduce screen flicker at low brightness.</string>
    <string name="check_overlay_permission">Please permit drawing over other apps to reduce screen flicker at low brightness.</string>
    <string name="check_settings_permission">Please allow modify system settings to adjust the screen brightness.</string>
    <string name="enable">Enable Service</string>
    <string name="enable_when_boot_up">Enable When System Boot Up</string>
    <string name="error_msg">The service has ended abnormally. Please turn off and restart the OLED Saver service in the accessibility function. If this prompt also appears, you need to restart the phone.</string>
    <string name="exclude_from_recents">Exclude From Recents</string>
    <string name="hello_world">Hello world!</string>
    <string name="help">how to use?</string>
    <string name="help_text_finish">After enabling the service, please do not manually modify the brightness of the system or turn on the rightness adjustment automatically. The application will take over the brightness adjustment. If you need further adjustment, please click the plus or minus sign in the notification bar.</string>
    <string name="help_text_min_brightness">Basic Physical Brightness refers to the lowest physical brightness of the screen. The default is 200. You can also set it yourself. Use another phone to take the current screen. The shutter time is set to 1/30 second or shorter. Adjust the Basic Physical Brightness value so that no flicker is observed in the lens. It should not be set too low.</string>
    <string name="help_text_pixel_filter">Using pixel filtering, in theory, it can save more power and prevent burn-in. Please adjust according to visual effects.</string>
    <string name="help_text_service">When you enabling the service, please follow the prompts to allow two necessary permissions.\10\10 After turning on, use the adjustment bar in the notification bar to adjust the brightness, click the appropriate progress to adjust the brightness, click the + - button to fine tune,and click the A button to switch the brightness automatic adjust mode.</string>
    <string name="lux">Lux</string>
    <string name="minimum_screen_brightness">Basic Physical Brightness</string>
    <string name="next">next</string>
    <string name="notification_channel_name">Brightness Adjust Bar</string>
    <string name="pixel_filter_percent">Use Pixel Filtering</string>
    <string name="report">report bugs</string>
    <string name="search_menu_title">Search</string>
    <string name="set_model_offset">Before you start using it, drag the progress bar to adjust to the screen brightness you think is appropriate now.</string>
    <string name="settings">Settings</string>
    <string name="settings_cancel">CANCEL</string>
    <string name="settings_ok">OK</string>
    <string name="start_service">Starting Service</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="stop_service">Stopping Service</string>
    <string name="system_screen_brightness_changed">Please use the app\'s adjustment bar in the notification bar to adjust the brightness</string>
    <string name="wizrad_accessibility_service">You also need to follow the prompts to open the corresponding features in the accessibility.</string>
    <string name="wizrad_min_brightness">Basic Physical Brightness refers to the lowest physical brightness of the screen. The default is 200. You can also set it yourself. Use another phone to take the current screen. The shutter time is set to 1/30 second or shorter. Adjust the Basic Physical Brightness value so that no flicker is observed in the lens. It should not be set too low.</string>
    <string name="wizrad_notification_bar">After opening, use the adjustment bar in the notification bar to adjust the brightness, click the appropriate progress to adjust the brightness, click the + - button to fine tune, and then click the A button to switch the automatic/manual brightness mode. Due to limitations of the Android system, users cannot adjust by sliding the progress bar.</string>
    <string name="wizrad_notification_panel">The service can be turned on/off via the quick settings in the drop-down menu.</string>
    <string name="wizrad_open_service">First, turn on the service in the main interface.</string>
    <string name="wizrad_pixel_filter">Turning on pixel filtering helps save power and prevents screen burn-in, but it can cause some phones to display less accurate and color cast. Please select whether to enable this function according to the visual effect after opening.</string>
    <string name="wizrad_screenshot_warning">The application controls the brightness of the screen through software masking, which will result in the screen being dark and so on (the pixel will be on the screenshot after the pixel filtering is turned on). Due to the limitation of the Android system, the application cannot automatically close itself before the screenshot. , please turn it off by yourself.</string>
    <string name="wizrad_start">Watch the wizard</string>
    <string name="wizrad_write_settings">The app must obtain permission to modify the system settings to take over the brightness control.</string>
</resources>
