<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:layout_width="300dp" android:layout_height="150dp">
    <RelativeLayout android:layout_width="match_parent" android:layout_height="150dp">
        <TextView android:id="@+id/dialog_title" android:padding="20dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/minimum_screen_brightness" style="@style/Base.TextAppearance.AppCompat.Title"/>
        <org.p024js.oledsaver.view.HorizontalTextSeekBar android:id="@+id/dialog_volume_value" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="10dp" android:layout_marginRight="10dp" android:layout_centerInParent="true"/>
        <Button android:id="@+id/dialog_cancel" android:padding="20dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/settings_cancel" android:layout_alignParentBottom="true" style="@style/Widget.AppCompat.Button.Borderless"/>
        <Button android:id="@+id/dialog_ok" android:padding="20dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/settings_ok" android:layout_alignParentRight="true" android:layout_alignParentBottom="true" style="@style/Widget.AppCompat.Button.Borderless"/>
    </RelativeLayout>
</RelativeLayout>
